Adding 16pt padding in ChromeSigninViewController

The padding is between the collection view and the buttons. The end of
the collection view was just at beginning of the buttons. It was too
easy for the user to tap on the collection view instead of the buttons.

Before:
https://drive.google.com/open?id=0ByXziH_JVCGJZGNDZFd5R19vM2M
https://drive.google.com/open?id=0ByXziH_JVCGJbnFoN1BFczViZnc

After:
https://drive.google.com/open?id=0ByXziH_JVCGJX2hjaGtkWmQ5dU0
https://drive.google.com/open?id=0ByXziH_JVCGJTl9FcC1JZlhQNm8

Bug: 739151
Change-Id: I36b2a2b9d3952f828b0eceff23c6237a0cd8a7e7
Reviewed-on: https://chromium-review.googlesource.com/620770
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495532}
Former-commit-id: 157597a6e81a2660a41a96a8bddde76bcce79b76